[package]
name = "cursive-async-view"
version = "0.6.0"
authors = [
    "CoolSlimbo",
    "Fin Christensen <christensen.fin@gmail.com>",
    "Johannes Wünsche <johannes.wuensche97@gmail.com>",
]
description = "A loading-screen wrapper for gyscos/cursive views"
license = "BSD-3-Clause"
readme = "README.md"
edition = '2021'
keywords = ["cursive-views", "cursive", "loading", "progress", "terminal"]

[features]
default = ["futures", "testing"]
futures = ["tokio/rt", "tokio/sync", "tokio/time"]
og = []
tokio = ["dep:tokio"]
testing = ["dep:log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = { git = "https://github.com/gyscos/cursive" }
log = { version = "0.4", optional = true }
interpolation = "0.2"
crossbeam = "0.8"
num = "0.4"
send_wrapper = "0.6"
lazy_static = "1.4"
doc-comment = "0.3"
tokio = { version = "1.36.0", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
spinners = { git = "https://github.com/CoolSlimbo/spinners" }

[dev-dependencies]
cursive = { git = "https://github.com/gyscos/cursive", default-features = false, features = [
    "crossterm",
] }
